--- a/miniprogram/pages/home/index.wxss
+++ b/miniprogram/pages/home/index.wxss
@@ -54,7 +54,7 @@
   right: 0;
   height: 100%;
   color: white;
-  background-color: #13227a;
+  background-color: #200e32;
   border-radius: 0 90px 90px 0;
 }
 
