--- a/miniprogram/pages/manage/operation/index.wxml
+++ b/miniprogram/pages/manage/operation/index.wxml
@@ -8,7 +8,7 @@
   <view class='gray-text text-xs'>加载中...</view>
 </view>
 <!-- 店铺 -->
-<shopBar bind:onShopChange="onShopChange"></shopBar>
+<shopBar bind:onShopChange="onShopChange" selecteAble="{{isShopManage}}"></shopBar>
 <block wx:if="{{!isLoading}}">
   <view class="container">
     <view class="title">
