--- a/miniprogram/pages/application/index.wxml
+++ b/miniprogram/pages/application/index.wxml
@@ -1,59 +1,59 @@
 <!--pages/application/index.wxml-->
 <cu-custom bgColor="bg-white" isBack="{{true}}">
-    <view slot="backText">返回</view>
-    <view slot="content">申请表</view>
+  <view slot="backText">返回</view>
+  <view slot="content">申请表</view>
 </cu-custom>
 <view class='cu-load load-modal' wx:if="{{isLoading}}">
-    <!-- <image src='/images/logo.png' class='png' mode='aspectFit'></image> -->
-    <view class='gray-text text-xs'>加载中...</view>
+  <!-- <image src='/images/logo.png' class='png' mode='aspectFit'></image> -->
+  <view class='gray-text text-xs'>加载中...</view>
 </view>
 <block wx:else>
-    <form catchsubmit="formSubmit" catchreset="formReset">
-        <view class="cu-form-group margin-top">
-            <view class="title">选择店铺</view>
-            <picker name="shopIndex" bindchange="PickerChange" value="{{index}}" range="{{shopList}}" range-key="name">
-                <view class="picker">
-                    {{shopList[index].name?shopList[index].name:'请选择一家店铺...'}}
-                </view>
-            </picker>
+  <form catchsubmit="formSubmit" catchreset="formReset">
+    <view class="cu-form-group margin-top">
+      <view class="title">选择店铺</view>
+      <picker name="shopIndex" bindchange="PickerChange" value="{{index}}" range="{{shopList}}" range-key="name">
+        <view class="picker">
+          {{shopList[index].name?shopList[index].name:'请选择一家店铺...'}}
         </view>
-        <block wx:if="{{hadApplication}}">
-            <view style="text-align: center;width: 100vw;margin-top: 30vh; font-size: 34rpx;">
-                您在该店的申请已提交，审核中，请耐心等待...
-            </view>
-        </block>
-        <block wx:else>
-            <view class="cu-form-group margin-top">
-                <view class="title">ID</view>
-                <input name="_openid" disabled="true" value="{{_openid}}"></input>
-            </view>
-            <view class="cu-form-group">
-                <view class="title">姓名</view>
-                <input name="name" placeholder="请填写姓名..."></input>
-            </view>
-            <view class="cu-form-group">
-                <view class="title">手机号码</view>
-                <input name="phone" placeholder="请填写手机号..."></input>
-                <view class="cu-capsule radius">
-                    <view class="cu-tag bg-blue">
-                        +86
-                    </view>
-                    <view class="cu-tag line-blue">
-                        中国大陆
-                    </view>
-                </view>
-            </view>
-            <upLoadFile count="2" directory="application" label="请上传身份证正反面" bind:onUploadOk="onUploadOk">
-            </upLoadFile>
-            <view class="cu-form-group align-start">
-                <view class="title">备注</view>
-                <textarea name="remarks" maxlength="300" bindinput="textareaBInput" placeholder="请输入备注..."></textarea>
-            </view>
-            <view class="flex padding" style="gap: 8px">
-                <button class="cu-btn round bg-blue" formType="submit">提交审核</button>
-                <button class="cu-btn round bg-black" formType="reset">重置</button>
-            </view>
-        </block>
+      </picker>
+    </view>
+    <block wx:if="{{hadApplication}}">
+      <view style="text-align: center;width: 100vw;margin-top: 30vh; font-size: 34rpx;">
+        您在该店的申请已提交，审核中，请耐心等待...
+      </view>
+    </block>
+    <block wx:else>
+      <view class="cu-form-group margin-top">
+        <view class="title">ID</view>
+        <input name="_openid" disabled="true" value="{{_openid}}"></input>
+      </view>
+      <view class="cu-form-group">
+        <view class="title">姓名</view>
+        <input name="name" type="nickname" placeholder="请填写姓名..."></input>
+      </view>
+      <view class="cu-form-group">
+        <view class="title">手机号码</view>
+        <input name="phone" type="number" placeholder="请填写手机号..."></input>
+        <view class="cu-capsule radius">
+          <view class="cu-tag bg-blue">
+            +86
+          </view>
+          <view class="cu-tag line-blue">
+            中国大陆
+          </view>
+        </view>
+      </view>
+      <upLoadFile count="2" directory="application" label="请上传身份证正反面" bind:onUploadOk="onUploadOk">
+      </upLoadFile>
+      <view class="cu-form-group align-start">
+        <view class="title">备注</view>
+        <textarea name="remarks" maxlength="300" bindinput="textareaBInput" placeholder="请输入备注..."></textarea>
+      </view>
+      <view class="flex padding" style="gap: 8px">
+        <button class="cu-btn round bg-blue" formType="submit">提交审核</button>
+        <button class="cu-btn round bg-black" formType="reset">重置</button>
+      </view>
+    </block>
 
-    </form>
+  </form>
 </block>
