--- a/miniprogram/pages/shop-manage/index.wxml
+++ b/miniprogram/pages/shop-manage/index.wxml
@@ -4,7 +4,7 @@
   <view slot="content">店长管理端</view>
 </cu-custom>
 <!-- 店铺 -->
-<shopBar bind:onShopChange="onShopChange" selecteAble="{{false}}"></shopBar>
+<shopBar bind:onShopChange="onShopChange" isShopManage="{{true}}"></shopBar>
 <view class='cu-load load-modal' wx:if="{{isLoading}}">
   <!-- <image src='/images/logo.png' class='png' mode='aspectFit'></image> -->
   <view class='gray-text text-xs'>加载中...</view>
