--- a/miniprogram/pages/user-center/index.wxml
+++ b/miniprogram/pages/user-center/index.wxml
@@ -46,7 +46,7 @@
             </view>
           </view>
         </view>
-        <view wx:else class="text-gray text-sm margin-top">
+        <view wx:else class="text-gray text-sm margin-top-lg">
           您还不是会员，通过 <span bind:tap="toBeVip" style="text-decoration: underline;color: var(--blue);">在线充值</span> 成为会员，可以享受商品折扣和赠送酒水等优惠
         </view>
       </view>
@@ -77,7 +77,7 @@
         </view>
       </view>
       <view style="height: 180rpx;"></view>
-      <view wx:if="{{isSuperManage||isShopManage}}" class="text-gray" style="width: 100%; text-align: center;" bind:tap="switchMode">
+      <view wx:if="{{userInfo.isSuperManage||isShopManage}}" class="text-gray" style="width: 100%; text-align: center;" bind:tap="switchMode">
         切换角色
       </view>
     </view>
