--- a/miniprogram/pages/user-center/bill/index.wxml
+++ b/miniprogram/pages/user-center/bill/index.wxml
@@ -1,42 +1,42 @@
 <wxs src="../../format.wxs" module="filter" />
 <cu-custom bgColor="bg-white" isBack="{{true}}">
-    <view slot="backText">返回</view>
-    <view slot="content">我的账单</view>
+  <view slot="backText">返回</view>
+  <view slot="content">我的账单</view>
 </cu-custom>
 <view class='cu-load load-modal' wx:if="{{isLoading}}">
-    <view class='gray-text text-xs'>加载中...</view>
+  <view class='gray-text text-xs'>加载中...</view>
 </view>
 <!-- 有数据 -->
 <view wx:if="{{ billList.length >= 1 }}">
-    <scroll-view scroll-y="true" style="height: {{containerHeight-110}}rpx;" refresher-enabled="true" bindrefresherrefresh="loadData" refresher-triggered="{{isRefreshing}}">
-        <view class="cu-list menu">
-            <block wx:for="{{ billList }}" wx:key="_id" wx:for-index="index">
-                <view class="cu-item shadow arrow" bind:tap="gotoDetail" data-item="{{item}}">
-                    <view class="content ">
-                        <view class="text-cut" style="gap: 21rpx;">
-                            <view class="text-df">
-                                交易金额: <span class="text-price" style="{{item.money<0?'color:red':'color:green'}}">
-                                    {{filter.formatMoney(item.money)}}
-                                </span>
-                            </view>
-                            <view wx:if="{{item.type==0}}" class="cu-tag line-purple round sm">会员充值</view>
-                            <view wx:if="{{item.type==1}}" class="cu-tag line-green round sm">会员消费</view>
-                            <view wx:if="{{item.type==2}}" class="cu-tag line-green round sm">微信支付</view>
-                            <view wx:if="{{item.type==3}}" class="cu-tag line-red round sm">店铺支出</view>
-                        </view>
-                        <view class="text-gray text-sm">
-                            {{filter.format(item.createDate, 'YY-MM-DD hh:mm:ss')}}
-                        </view>
-                    </view>
-                </view>
-            </block>
+  <scroll-view scroll-y="true" style="height: {{containerHeight-110}}rpx;" refresher-enabled="true" bindrefresherrefresh="loadData" bindscrolltolower="loadMore" refresher-triggered="{{isRefreshing}}">
+    <view class="cu-list menu">
+      <block wx:for="{{ billList }}" wx:key="_id" wx:for-index="index">
+        <view class="cu-item shadow arrow" bind:tap="gotoDetail" data-item="{{item}}">
+          <view class="content ">
+            <view class="text-cut" style="gap: 21rpx;">
+              <view class="text-df">
+                交易金额: <span class="text-price" style="{{item.money<0?'color:red':'color:green'}}">
+                  {{filter.formatMoney(item.money)}}
+                </span>
+              </view>
+              <view wx:if="{{item.type==0}}" class="cu-tag line-purple round sm">会员充值</view>
+              <view wx:if="{{item.type==1}}" class="cu-tag line-green round sm">会员消费</view>
+              <view wx:if="{{item.type==2}}" class="cu-tag line-green round sm">微信支付</view>
+              <view wx:if="{{item.type==3}}" class="cu-tag line-red round sm">店铺支出</view>
+            </view>
+            <view class="text-gray text-sm">
+              {{filter.format(item.createDate, 'YY-MM-DD hh:mm:ss')}}
+            </view>
+          </view>
         </view>
-    </scroll-view>
+      </block>
+    </view>
+  </scroll-view>
 </view>
 <!-- 无数据 -->
 <block wx:else>
-    <view style="text-align: center;margin-top: 20vh;">
-        <image style="width: 50vw;" src="../../../images/icons/no-data.svg" mode="widthFix" />
-        <view style="top: -240rpx;">暂无数据</view>
-    </view>
+  <view style="text-align: center;margin-top: 20vh;">
+    <image style="width: 50vw;" src="../../../images/icons/no-data.svg" mode="widthFix" />
+    <view style="top: -240rpx;">暂无数据</view>
+  </view>
 </block>
