--- a/miniprogram/pages/manage/vip/index.wxml
+++ b/miniprogram/pages/manage/vip/index.wxml
@@ -23,7 +23,7 @@
                         价格：￥{{item.price}}
                     </view>
                     <view>
-                        折扣率：{{item.rate==100?'不打':item.rate}}折
+                        折扣率：{{item.rate==100?'不打':item.rate/10}}折
                     </view>
                     <view>
                         备注：{{item.remarks}}
