--- a/miniprogram/pages/user-center/bill/detail.wxml
+++ b/miniprogram/pages/user-center/bill/detail.wxml
@@ -41,7 +41,7 @@
                 </view>
                 <view class="content">
                     <view class="text-sm flex  padding-tb-sm" style="width: 50%;">
-                        会员折扣：{{vipPackageDetail.rate}} 折
+                        会员折扣：{{vipPackageDetail/10}} 折
                     </view>
                 </view>
                 <view class="content text-sm text-gray margin-top">
@@ -62,7 +62,7 @@
         </view>
         <view class="padding">
             支付方式：{{orderDetail.payType==1?'会员账号支付':'普通支付'}}
-            <span wx:if="{{orderDetail.rate}}">{{orderDetail.payType==1?'('+orderDetail.rate+'折)':''}}</span>
+            <span wx:if="{{orderDetail.rate}}">{{orderDetail.payType==1?'('+orderDetail.rate/10+'折)':''}}</span>
         </view>
     </view>
     <view class="padding text-lg">
@@ -74,11 +74,19 @@
                 <image class="cu-avatar round lg" src="{{goodsDetail.img||'../../images/icons/morentu.svg'}}" mode="aspectFill" />
                 <view class="content">
                     <view class="text-grey">{{ goodsDetail.title }}</view>
-                    <view class="text-gray text-sm flex" style="gap: 21rpx;">
+                    <view wx:if="{{goodsDetail._id != '8d1a732f6668632f02bffddc546aef20'}}" class="text-gray text-sm flex" style="gap: 21rpx;">
                         <view style="color: gray;">
                             原价：<span class="text-price">{{filter.formatMoney(goodsDetail.price)}}</span>
                         </view>
                         <view class="text-orange">实付：<span class="text-price">{{filter.formatMoney(goodsDetail.price*orderDetail.rate / 100)}}</span></view>
+                        <view class="text-gray text-sm">
+                            x{{ goodsDetail.number}}
+                        </view>
+                    </view>
+                    <view wx:else class="text-gray text-sm flex" style="gap: 21rpx;">
+                        <view style="color: gray;">
+                            会员存酒取出
+                        </view>
                         <view class="text-gray text-sm">
                             x{{ goodsDetail.number}}
                         </view>
